# SmartContracts

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  security.yml
contracts/blend-rule/src/: contract.rs  lib.rs
contracts/blend-vault/src/: blend_client.rs  contract.rs  lib.rs  storage.rs  tests.rs
contracts/blend-yield-policy/src/: contract.rs  lib.rs
contracts/blend-yield-policy/test_snapshots/contract/tests/: enforce_disabled_fails.1.json  enforce_no_yield_fails.1.json  enforce_period_not_elapsed_fails.1.json  enforce_unauthorized_fails.1.json  enforce_valid_passes.1.json  enforce_wrong_function_fails.1.json  enforce_wrong_recipients_fails.1.json  enforce_wrong_vault_fails.1.json  init_twice_fails.1.json  install_invalid_accesly_wallet_fails.1.json  install_twice_fails.1.json  ledgers_until_next_zero_on_first.1.json  uninstall_not_installed_fails.1.json  uninstall_success.1.json
contracts/ed25519-verifier/: Cargo.toml
contracts/ed25519-verifier/src/: contract.rs  lib.rs
contracts/governance/: Cargo.toml
contracts/governance/src/: contract.rs
contracts/integration-tests/: Cargo.toml
contracts/integration-tests/src/: lib.rs
contracts/integration-tests/test_snapshots/: rule_four_is_yield_auto_with_no_signers.1.json  rule_zero_is_biometric_tx_scoped_to_first_tx_target.1.json  setup_yield_cannot_be_called_twice.1.json  setup_yield_installs_yield_auto_rule.1.json  smart_account_constructor_cannot_be_called_twice.1.json  smart_account_constructor_wires_all_real_contracts_with_two_tokens.1.json  smart_account_constructor_wires_real_contracts_with_two_tokens.1.json  smart_account_constructor_with_empty_tx_targets_installs_only_base_rules.1.json  v3_constructor_cannot_be_called_twice.1.json  v3_constructor_installs_three_base_rules_with_two_tx_targets.1.json  v3_constructor_with_empty_tx_targets_installs_two_base_rules.1.json  v3_does_not_install_zk_recovery_rule.1.json  v3_get_email_commitment_returns_constructor_value.1.json  v3_rotate_signer_keeps_rule_count_and_each_rule_has_one_signer.1.json  v3_rotate_signer_updates_storage_and_emits_event.1.json  v3_rule_zero_is_biometric_tx_when_tx_targets_present.1.json  verify_returns_false_even_for_registered_dkim_key.1.json  yield_auto_rule_has_no_signers.1.json
contracts/integration-tests/tests/: smart_account_construction.rs  smart_account_v3.rs  zk_recovery_hardfail.rs
contracts/secp256r1-verifier/: Cargo.toml
contracts/secp256r1-verifier/src/: contract.rs  lib.rs
contracts/session-key/src/: contract.rs
contracts/smart-account/: Cargo.toml
contracts/smart-account-v3/: Cargo.toml
contracts/smart-account-v3/src/: context_rules.rs  contract.rs  lib.rs
contracts/smart-account/src/: context_rules.rs  contract.rs  lib.rs  trustlines.rs
contracts/spending-limit/: Cargo.toml
contracts/spending-limit/src/: contract.rs  lib.rs
contracts/upgrade-rule/src/: contract.rs
contracts/upgrade-rule/test_snapshots/contract/tests/: enforce_upgrade_authorized_target_passes.1.json  enforce_wrong_target_fails.1.json  install_beyond_max_fails.1.json  install_stores_config.1.json  install_twice_fails.1.json  install_up_to_max_succeeds.1.json  two_accounts_independent_counters.1.json  uninstall_frees_slot_for_new_install.1.json  uninstall_removes_config.1.json
contracts/yield-distribution/: Cargo.toml
contracts/yield-distribution/src/: contract.rs  lib.rs
contracts/zk-email-verifier/: Cargo.toml
contracts/zk-email-verifier/src/: contract.rs  lib.rs
contracts/zk-email-verifier/src/contract/: tests.rs
contracts/zk-email-verifier/test_snapshots/contract/tests/: admin_can_rotate_vk.1.json  verify_rejects_command_hash_mismatch.1.json  verify_rejects_email_commitment_mismatch.1.json  verify_rejects_revoked_dkim.1.json  verify_rejects_wrong_signal_count.1.json
docs/: Threat_Model_Recovery.md
scripts/: deploy_testnet.sh  deploy_zk_email_verifier_v2.sh  deployed_addresses.env
scripts/blend-yield-init/: README.md  init.mjs  package.json
