[workspace]
resolver = "2"
members = ["contracts/*"]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
soroban-sdk    = "25.3.0"
ed25519-dalek  = "2.1.1"
p256           = { version = "0.13.2", features = ["ecdsa"] }
hex-literal    = "1.0.0"
# oz-reference local path estaba pensado para desarrollo concurrente con
# upstream — sin el clone local, las deps van al repo OZ pin-eado al tag v0.7.1.
# stellar-zk-email no está publicado en crates.io, por eso todas las deps
# de OZ van por el mismo path git para mantener coherencia de versiones.
stellar-accounts       = { git = "https://github.com/OpenZeppelin/stellar-contracts", tag = "v0.7.1" }
stellar-contract-utils = { git = "https://github.com/OpenZeppelin/stellar-contracts", tag = "v0.7.1" }
stellar-governance     = { git = "https://github.com/OpenZeppelin/stellar-contracts", tag = "v0.7.1" }
stellar-access         = { git = "https://github.com/OpenZeppelin/stellar-contracts", tag = "v0.7.1" }
stellar-macros         = { git = "https://github.com/OpenZeppelin/stellar-contracts", tag = "v0.7.1" }
stellar-tokens         = { git = "https://github.com/OpenZeppelin/stellar-contracts", tag = "v0.7.1" }
stellar-zk-email       = { git = "https://github.com/OpenZeppelin/stellar-contracts", tag = "v0.7.1" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
