[workspace]
resolver = "2"
# Workspace explícito tras la poda 2026-06-15.
#
# Out-of-scope (no compilan en el workspace, viven en `contracts/` solo
# por git history para rescate si el spec cambia):
#  - yield-distribution: yield interno fuera de scope (Etherfuse cubre rendimiento).
#  - blend-vault, blend-yield-policy, blend-rule: Blend integration fuera de scope.
#
# Deprecated pero AÚN en workspace (smart-account v2-legacy lo invoca durante el
# constructor para `batch_canonicalize_key`; saldrá del workspace cuando llegue
# Smart Account v3 en Fase 1 que ya no referencia zk-email):
#  - zk-email-verifier
#
# Ver SDKAccesly/docs/Plan_Final_v1.md §10 y §11 (Fase 1).
members = [
    "contracts/ed25519-verifier",
    "contracts/secp256r1-verifier",
    "contracts/zk-email-verifier",
    "contracts/spending-limit",
    "contracts/session-key",
    "contracts/governance",
    "contracts/upgrade-rule",
    "contracts/smart-account",
    "contracts/integration-tests",
]
exclude = [
    "contracts/yield-distribution",
    "contracts/blend-vault",
    "contracts/blend-yield-policy",
    "contracts/blend-rule",
]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
soroban-sdk    = "25.3.0"
ed25519-dalek  = "2.1.1"
p256           = { version = "0.13.2", features = ["ecdsa"] }
hex-literal    = "1.0.0"
# oz-reference local path estaba pensado para desarrollo concurrente con
# upstream — sin el clone local, las deps van al repo OZ pin-eado al tag v0.7.1.
# stellar-zk-email no está publicado en crates.io, por eso todas las deps
# de OZ van por el mismo path git para mantener coherencia de versiones.
stellar-accounts       = { git = "https://github.com/OpenZeppelin/stellar-contracts", tag = "v0.7.1" }
stellar-contract-utils = { git = "https://github.com/OpenZeppelin/stellar-contracts", tag = "v0.7.1" }
stellar-governance     = { git = "https://github.com/OpenZeppelin/stellar-contracts", tag = "v0.7.1" }
stellar-access         = { git = "https://github.com/OpenZeppelin/stellar-contracts", tag = "v0.7.1" }
stellar-macros         = { git = "https://github.com/OpenZeppelin/stellar-contracts", tag = "v0.7.1" }
stellar-tokens         = { git = "https://github.com/OpenZeppelin/stellar-contracts", tag = "v0.7.1" }
stellar-zk-email       = { git = "https://github.com/OpenZeppelin/stellar-contracts", tag = "v0.7.1" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
